# synapse

./: Cargo.toml  config_example.yaml  install.sh
others/systemd/: synapse.service
src/: access_log.rs  access_rules.rs  bpf_stats.rs  cli.rs  event_queue.rs  file_integrity.rs  firewall.rs  main.rs  redis.rs
src/acme/: lib.rs  upstreams_reader.rs
src/bpf/: filter.bpf.c
src/http_proxy/: proxyhttp.rs
src/utils/: bpf_utils.rs  tcp_fingerprint.rs  tls_client_hello.rs  tools.rs
src/waf/: wirefilter.rs
src/worker/: config.rs  log.rs
